--- a/styles.css
+++ b/styles.css
@@ -124,3 +124,26 @@ font-weight: 700;  /* the 700 value comes from Frontend mentor*/
 }
 
 /*  SHORTEN  */
+
+/*used the section to apply the non-layout properties*/
+.shorten-section { 
+  background-color: var(--light-bg); /*applies color of variable '--light-bg' declared in the ':root' style rule  */
+}
+
+.shorten-box {
+  background-color: var(--dark-violet);
+  padding: 40px;
+  border-radius: 10px;
+  transform: translateY(-80px); /* Using transform is great for overlapping elements, e.g., making .shorten-box float above a section below*/
+  display: flex;
+  gap: 20px;
+}
+
+
+.shorten-box input {
+  flex: 1;  /* takes up all available space in the flex container, but shrinks if necessary. ITC, expands the input fiel to fit the available space within the <div> container*/
+  padding: 15px;
+  border-radius: 6px;
+  border: none;
+  font-size: 16px;
+}
