--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* allows you to create variables for each color that you can later use across your project, making for claener code  */
 :root {
   --cyan: hsl(180, 66%, 49%);
-  --dark-violet: hsl(257, 27%, 26%);
+  --dark-violet: hsl(257, 27%, 26%);    
   --gray: hsl(0, 0%, 75%);
   --grayish-violet: hsl(257, 7%, 63%);
   --very-dark-blue: hsl(255, 11%, 22%);
@@ -19,7 +19,7 @@
 }
 
 body {
-  border: 3px solid red;
+  /*border: 3px solid red;*/
   font-family: 'Poppins', sans-serif;
   color: var(--very-dark-violet);
 }
@@ -33,7 +33,7 @@ a {
 
  /* this style will target all containers with 'container' class in them*/
 .container { 
-  border: 2px solid green;
+  /*border: 2px solid green;*/
   max-width: 1200px;   /*limits how wide the container can get, even on huge screens, it will never exceed 1200px*/
                         /*to determine this value, you should choose one that allows between 60–75 characters per line ideally, beyond that reading gets tiring*/
                         /*on most fonts at normal body sizes appros 1100–1200px keeps text readable.*/
@@ -45,16 +45,21 @@ a {
 
 /*  NAV BAR  */
 header {    
-  border: 2px solid blue;
+  /*border: 2px solid blue;*/
   padding: 40px 0; /*The '<header>' handles vertical spacing, while  '.container' inside handles horizontal spacing. Needed here bc it was sticking to the top viewport edge.*/
 }
 
 /* manipulating teh layout of the 2 CHILD div containers of the PARENT div */
 .nav {
   display: flex; /* manipulates ALL the <div>s in my 'nav' class. ITC laying them from a column into an inline layout*/ 
-  /*justify-content: center; /*aligns the manipulated items (<div>s) HORIZONTALY (IOWs along the x axis) to be CENTERED*/
+  /*justify-content: center; /*aligns the manipulated items (<div>s) HORIZONTALY (IOWs along the x axis) to be CENTERED. Works with Grid or Flex*/
   justify-content: space-between;  /*aligns the SPACE IN BETWEEN manipulated items (<div>s) HORIZONTALY (IOWs along the x axis) to be CENTERED */
   align-items: center;  /*aligns the manipulated items (<div>s) VERTICALLY (IOWs along the y axis)*/
+}
+
+.nav a { 
+color: var(--grayish-violet);
+font-weight: bold;
 }
 
 /* manipulating the layout of the ELEMENTS of BOTH CHILD divs, left and right */
@@ -72,10 +77,15 @@ header {
 }
 */
 
-.nav button{
-color: var(--grayish-violet); /*applies color of variable '--grayish-violet' declared in the ':root' style rule  */
+.nav-right button{
+color: var(--light-bg); /*applies color of variable '--light-bg' declared in the ':root' style rule  */
 font-weight: 700;  /* the 700 value comes from Frontend mentor*/
+padding: 10px 18px;
+font-size: 15px;
+/*font-weight: bold;*/
+background-color: var(--cyan)
 }
+
 
 .logo {
   font-weight: 700;  /* the 700 value comes from Frontend mentor*/
@@ -89,11 +99,15 @@ font-weight: 700;  /* the 700 value comes from Frontend mentor*/
   border-radius: 25px;
   font-weight: 700;
   /*display: inline-block; /* 3 display types (block, inline, inline-block)*/
+  border: none;
 }
 
 .primary {
   background-color: var(--cyan); /*applies color of variable '--cyan' declared in the ':root' style rule  */
   color: white;
+  font-weight: 750;  /* the 700 value comes from Frontend mentor*/
+  padding: 15px 30px;
+  font-size: 18px;
 }
 
 /* HERO */
@@ -137,6 +151,7 @@ font-weight: 700;  /* the 700 value comes from Frontend mentor*/
   transform: translateY(-80px); /* Using transform is great for overlapping elements, e.g., making .shorten-box float above a section below*/
   display: flex;
   gap: 20px;
+  /*margin-bottom: 10px;*/
 }
 
 
@@ -146,51 +161,106 @@ font-weight: 700;  /* the 700 value comes from Frontend mentor*/
   border-radius: 6px;
   border: none;
   font-size: 16px;
+  /*font-weight: bold;*/
 }
 
+input::placeholder {
+  /*color: var(--gray);  */
+  color: var(--grayish-violet);
+  opacity: 1;    
+   font-size: 18px;
+  font-weight: 500;
+}
+
+
+.shorten-section button{
+    border-radius: 6px;
+}
 
 /* ADVANCED STATS*/
 .stats {
     display:flex;
     flex-direction: column;
-    /*display:block;*/
     align-items: center;
     justify-content: center;
+
+    /*border: 3px solid purple;*/
+    /*display:block;*/
+    /*align-items: stretch;*/
     /*max-width: 420px;*/
+    /*max-width: auto;*/
     /*padding: 60px 0 120px;*/
-    padding: 50px;
+    /*padding: 50px;*/
+    padding: 10px 0 120px;
     gap: 20px;
     background-color: var(--light-bg); 
+    /*width: auto;*/
+}
+
+.stats-text {
+    /*max-width: 420px;*/
+  max-width: 500px;
+  /*max-width: 120px;*/
+   /*width: 100%; */    
+  margin: 20px auto 80px;
+  color: var(--grayish-violet);
+}
+
+.stats.container {
+  max-width: none;        /* removes the width cap */
+  margin: 0;              /* removes centering */
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.stats > * {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
 .cards {
+    /*border: 3px solid purple;*/
     display:flex;
     /*justify-content: space-between*/
-    gap: 10px;
+    gap: 30px;
+    position: relative;
 }
 
-.cards  h3{
-  font-size: 18px;
-  /*line-height: 1.1; */
-  margin-bottom: 10px;
-
+h2 {
+    font-size: 30px;
 }
 
-.cards  p{
-  color: var(--grayish-violet); 
-  margin-bottom: 30px;
-  max-width:500px;
-
+/* works together with porperty 'position: relative;' to SETUP  that downslope effect of the 3 cards*/
+.cards::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 8px;
+  background-color: var(--cyan);
 }
-
 
 .card {
     /*border: 3px solid red;*/
     max-width: 350px;
-    padding: 25px 20px 25px 20px;
-    border-radius: 10px;
-        background-color: white;
+    /*padding: 25px 20px 25px 20px;*/
+    padding: 60px 30px 30px;
+    border-radius: 6px;
+    text-align: left;
+    background-color: white;
+    position: relative; /*casued the aqua-blue line to show behind the 3 cards*/
+}
+
+.card:nth-child(2) { /* targets 2nd card to get SQUEEZED DOWN (not pushed down) by 40px*/ 
+  margin-top: 40px;
+  margin-bottom: -40px;
+}
+
+.card:nth-child(3) {  /* targets card card to get SQUEEZED DOWN (not pushed down) by 80px*/ 
+  margin-top: 80px;
+  margin-bottom: -80px;
 }
 
 .icon {
@@ -198,11 +268,92 @@ font-weight: 700;  /* the 700 value comes from Frontend mentor*/
     /*background-color: red;*/
     /*background-color: hsl(260, 8%, 14%);*/
     background-color: var(--dark-violet);  /* this was failing to attach at first bc of the space between 'var' and '('  */
-    max-width: 55px;
-    border-radius: 40px;
-    display: flex;
+    /*max-width: 55px;*/
+    width: 80px;
+    height: 80px;
+    /*border-radius: 40px;*/
+    border-radius: 50%; /*it is only when you specify a specific measurement for an element, that you can use percentages (or line heights) on other properties tat relate to it. [not berified]*/
+    /*display: flex;
     align-items: center;
-    justify-items: center;
+    justify-items: center; /* works only on grid projects */
     margin-bottom: 30px;
+    position: absolute; /*causes the element no longer take up space where it appears in the HTML. IOWs, other elements behave like it’s not there and you can now 
+                        place it exactly as you wish using top, right, bottom, and left*/
+    top: -40px; /*itc this propertyis used to move the element upward from its reference point, givin it that 'spill-over-the-card' effect */
+    padding: 19px;
+
 }
 
+.card  h3{
+  /*font-size: 100px;*/
+  /*line-height: 1.1; */
+  margin-bottom: 10px;
+  /*margin-top: none;*/
+}
+
+.card  p{
+  color: var(--grayish-violet); 
+  font-size: 14px;
+  /*margin-bottom: 30px;*/
+  /*margin: 20px auto 80px;*/
+  max-width:500px;
+}
+
+
+/* BOOST */
+.boost {
+  /*border: 3px solid red;*/
+  background-image: url("./images/bg-boost-desktop.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  /*background-size: contain;*/
+  /*background-size: 0% 80%; /* Width 50%, Height 50% */
+  background-color: var(--dark-violet);
+  color: white;
+  text-align: center;
+  padding: 60px 20px;
+}
+
+.boost h2 {
+  margin-bottom: 20px;
+}
+
+/*  FOOTER  */
+
+footer {
+  background-color: var(--very-dark-violet);
+  color: white;
+  padding: 60px 0;
+}
+
+.footer {
+display: flex; 
+/*align-items:center;*/
+align-items:flex-start;
+
+justify-content: space-between;
+}
+
+.footer-nav h4{
+ margin-bottom: 10px;
+}
+
+footer a {
+  display: block;
+  color: var(--gray);
+  font-size: 14px;
+  margin-bottom: 6px;
+}
+
+.footer-nav {
+display: flex; 
+flex-direction: column;
+align-items: flex-start;
+/*justify-content:center;*/
+}
+
+.social-icons {
+    display: flex;
+    gap: 20px;
+}
